Revision history for Perl extension PGXN::API

0.12.9

0.12.8  2011-04-29T21:21:13
      - Some documentation tweaks.
      - First release to CPAN.

0.12.7  2011-04-28T22:28:31
      - Fixed a bug where an updated root `index.json` updated on the mirror
        was not likewise getting updated in the API root.
      - Moved the default `index.html` file so that it will be installed and
        findable when PGXN::API is installed from CPAN.
      - Added a link to the API docs to the default `index.html` file.
      - Renamed the `{char}` variable in the `userlist` URI template to
        `{letter}`, since it better describes the value (an ASCII letter a-z).
      - Search parameters must be submitted via a GET request.

0.12.6  2011-04-27T18:52:18
      - Eliminated "Use of uninitialized variable in soubroutine" warning when
        indexing extensions with no abstract.
      - Allow an optional trailing backslash on search URLs (since the
        template includes one).
      - Add new "special files" to detect: INSTALL, LICENSE, COPYING, and
        AUTHORS.
      - Changed search results content type from `text/json` to
        `application/json`.
      - Enabled JSONP for search requests.
      - Changed tests to use `.zip` ending for downloads instead of `.pgz`.

0.12.5  2011-04-25T18:07:27
      - The directory name in which browsable distribution source files are
        unzipped is now always lowercase.
      - Fixed the primary key in the for distributsions, docs and extension in
        the search index to always be lowercased.
      - Distribution names and versions are now always lowercase in verbose
        outout.

0.12.4  2011-04-25T16:59:36
      - The prefix in zip files is now assumed to be lowercase, as
        PGXN::Manager v0.12.4 enforces.

0.12.3  2011-04-25T16:35:28
      - When searching for "special files", the indexer now looks for files
        ending in ".in" if it doesn't find them without the ".in". Suggested