@@ -1,6 +1,7 @@
 Revision history for Perl extension PGXN::API
 
 0.12.9
+      - Fixed a test failure in `t/indexer.t` on case-sensitive file systems.
 
 0.12.8  2011-04-29T21:21:13
       - Some documentation tweaks.
